// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumb > renders with as correctly 1`] = `
"<div aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</div>"
`;

exports[`breadcrumb > renders with class correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0 w-48">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with color neutral correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-inverted/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-inverted/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-inverted/25 focus-visible:outline-3 color-text-highlighted"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with custom slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary">Custom slot</a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with item slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors">Item slot</a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3">Item slot</span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with item-label slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Item label slot</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Item label slot</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with item-leading slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors">Item leading slot<span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3">Item leading slot<span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with item-trailing slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span>Item trailing slot</a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span>Item trailing slot</span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with items correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with labelKey correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
        <!--v-if-->
      </a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">i-lucide-box</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">i-lucide-link</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with separator slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex">/</li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex">/</li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with separatorIcon correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:minus shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:minus shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`breadcrumb > renders with ui correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium outline-primary/25 focus-visible:outline-3 hover:color-text transition-colors font-bold"><span data-slot="linkLeadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/praburangki.png" alt="praburangki" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md color-text-muted font-medium cursor-not-allowed opacity-75 outline-primary/25 focus-visible:outline-3 font-bold"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 color-text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 rounded-md font-600 outline-primary/25 focus-visible:outline-3 text-primary font-bold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;
